tests/baselines/reference/voidReturnLambdaValue(strict=true).errors.txt
voidReturnLambdaValue.ts(1,14): error TS7006: Parameter 'arg1' implicitly has an 'any' type.
voidReturnLambdaValue.ts(1,20): error TS7006: Parameter 'arg2' implicitly has an 'any' type.
voidReturnLambdaValue.ts(1,36): error TS7006: Parameter 'v1' implicitly has an 'any' type.
voidReturnLambdaValue.ts(1,39): error TS7006: Parameter 'v2' implicitly has an 'any' type.
voidReturnLambdaValue.ts(1,42): error TS7006: Parameter 'v3' implicitly has an 'any' type.


==== voidReturnLambdaValue.ts (5 errors) ====
    function foo(arg1, arg2, callback:(v1,v2,v3) => void):void {
                 ~~~~
!!! error TS7006: Parameter 'arg1' implicitly has an 'any' type.
                       ~~~~
!!! error TS7006: Parameter 'arg2' implicitly has an 'any' type.
                                       ~~
!!! error TS7006: Parameter 'v1' implicitly has an 'any' type.
                                          ~~
!!! error TS7006: Parameter 'v2' implicitly has an 'any' type.
                                             ~~
!!! error TS7006: Parameter 'v3' implicitly has an 'any' type.
                    return callback(arg1, arg2, arg2);
    }